
set(test_header_dir ${CMAKE_CURRENT_SOURCE_DIR})
function(add_mpi_test name file no_mpi_proc)
  find_package(MPI REQUIRED)
  message(STATUS "Adding test " ${name})
  add_executable(${name} ${file})
  target_include_directories(${name} PUBLIC ${test_header_dir})
  if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    get_target_property(FLGS ${name} LINK_FLAGS_DEBUG)
    if (FLGS STREQUAL "FLGS-NOTFOUND")
      SET(FLGS "") # set to empty string
    endif ()
    SET(FLGS "${FLGS} ${GCC_COVERAGE_LINK_FLAGS}")
    set_target_properties(${name} PROPERTIES LINK_FLAGS_DEBUG ${FLGS})
  endif ()
  #set(test_parameters -np ${no_mpi_proc} "${CMAKE_CURRENT_BINARY_DIR}/${name}" ${ARGN})
  #add_test(NAME ${name} COMMAND "mpirun" ${test_parameters} )
  add_test(NAME ${name} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${no_mpi_proc} ${MPIEXEC_PREFLAGS} ${CMAKE_CURRENT_BINARY_DIR}/${name} ${MPIEXEC_POSTFLAGS} ${ARGN})
endfunction(add_mpi_test)

add_subdirectory(util)
add_subdirectory(multiscale)
#add_subdirectory(analysis)
add_subdirectory(multiscale_analysis)
